<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/lpcolors_50"
    android:layout_marginTop="20dp" android:layout_marginBottom="20dp">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <com.wp.lifeplan.ui.CollectTimeLinearView style="@style/TimerPickerStyle"
            android:id="@+id/generate_date_item" custom_view:collect_title_str="@string/generate_date"/>

        <LinearLayout style="@style/DetailsItemStyle" >
            <TextView android:textColor="@color/colorAccent" style="@style/DetailSubheadStyle"
                android:text="@string/start_location" />

            <EditText android:layout_width="wrap_content" android:layout_weight="1" android:enabled="false"
                android:layout_height="wrap_content" android:id="@+id/create_location"
                android:textColor="@color/default_text_color" android:textColorHint="@color/default_text_color"
                android:textSize="@dimen/text_body" android:ellipsize="end"
                android:singleLine="true" />
        </LinearLayout>

        <com.wp.lifeplan.ui.HorizontalSpinnerView style="@style/HorizontalSpinnerStyle"
            android:id="@+id/level_item" custom_view:enter="@array/level_array"
            custom_view:spinner_title_str="@string/level"
            custom_view:spinner_titleTextColor="@color/colorAccent"/>

        <com.wp.lifeplan.ui.HorizontalSpinnerView style="@style/HorizontalSpinnerStyle"
            android:id="@+id/plan_item" custom_view:enter="@array/plan_array"
            custom_view:spinner_title_str="@string/plan"
            custom_view:spinner_titleTextColor="@color/colorAccent"/>

        <com.wp.lifeplan.ui.HorizontalSpinnerView style="@style/HorizontalSpinnerStyle"
            android:id="@+id/status_item" custom_view:enter="@array/status_array"
            custom_view:spinner_title_str="@string/status"
            custom_view:spinner_titleTextColor="@color/colorAccent"/>

        <com.wp.lifeplan.ui.CollectTimeLinearView style="@style/TimerPickerStyle"
            android:id="@+id/schedule_time_item" custom_view:collect_title_str="@string/schedule_time"/>

        <LinearLayout style="@style/DetailsItemStyle" >
            <TextView android:textColor="@color/colorAccent" style="@style/DetailSubheadStyle"
                android:text="@string/location" />

            <EditText android:layout_width="wrap_content" android:layout_weight="1" android:enabled="false"
                android:layout_height="wrap_content" android:id="@+id/last_location"
                android:textColor="@color/default_text_color" android:textColorHint="@color/default_text_color"
                android:textSize="@dimen/text_body"/>
        </LinearLayout>

        <com.wp.lifeplan.ui.ExtendTextView style="@style/ExtentTextViewStyle"
            custom_view:title="@string/idea" android:id="@+id/idea"/>

        <com.wp.lifeplan.ui.ExtendTextView style="@style/ExtentTextViewStyle"
            custom_view:title="@string/target" android:id="@+id/target"/>

        <com.wp.lifeplan.ui.ExtendTextView style="@style/ExtentTextViewStyle"
            custom_view:title="@string/next_step" android:id="@+id/next_step"/>

        <LinearLayout android:layout_width="match_parent" android:orientation="horizontal"
            android:layout_height="wrap_content" android:id="@+id/edit_bar">
            <Button
                android:layout_width="0px" android:text="@string/save" android:layout_weight="1"
                android:layout_height="35dp" android:layout_marginRight="10dp"
                android:background="@drawable/green_solid_bkg" android:textColor="@android:color/white"
                android:id="@+id/save"/>
            <Button
                android:layout_width="0px" android:text="@string/cancel" android:layout_weight="1"
                android:layout_height="35dp" android:layout_marginBottom="10dp"
                android:background="@drawable/green_solid_bkg" android:textColor="@android:color/white"
                android:id="@+id/cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>